普罗米修斯/普罗米修斯operator/kube-prometheus-0.11.0/otheryaml/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus
spec:
  rules:
  - host: prometheus-operator.alnk.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
        path: /
        pathType: Prefix
